[package]
name = "ce-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
clap = "4.2.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = "0.7.8"
regex = "1.10.2"
colored = "2.0.4"
version-compare = "0.1.1"
